Fixed a bug in the dark theme when hovering over a control variable, the material icon uses a wrong color.

--- a/src/_variables.sass
+++ b/src/_variables.sass
@@ -72,7 +72,7 @@ $dark-login-font-color: #046988
 $dark-intro-logout-icon-color: #c7dcf1
 $dark-control-variables-border-color: #5b5b5f
 $dark-control-variable-hover-background-color: #1e1e1e
-$dark-control-variable-hover-icon-color: #5b5b5f
+$dark-control-variable-hover-icon-color: #c7dcf1
 $dark-control-variables-input-underline: #4e4e4e
 $dark-control-variables-dropdown-hover-font-color: #01abec
 $dark-control-variables-dropdown-hover-background-hover-color: rgba(0, 0, 0, 0.10)
